--- a/deno.json
+++ b/deno.json
@@ -5,15 +5,12 @@
   "tasks": {
     "dev": "deno run --watch --allow-all --env-file=.env main.ts",
     "start": "deno run --allow-all --env-file=.env main.ts",
-    "test": "deno test --allow-all --env-file=.env",
     "lint": "deno lint",
     "fmt": "deno fmt"
   },
   "imports": {
     "@libs/logger": "jsr:@libs/logger@3",
-    "@oak/oak": "jsr:@oak/oak@17",
-    "@std/assert": "jsr:@std/assert@1",
-    "@std/encoding": "jsr:@std/encoding@1"
+    "@oak/oak": "jsr:@oak/oak@17"
   },
   "fmt": {
     "lineWidth": 120,
