--- a/deno.json
+++ b/deno.json
@@ -11,7 +11,7 @@
   "imports": {
     "@libs/logger": "jsr:@libs/logger@3",
     "@oak/oak": "jsr:@oak/oak@17",
-    "@std/cache": "jsr:@std/cache@^0.1"
+    "npm:postgres": "npm:postgres@^3"
   },
   "fmt": {
     "lineWidth": 120,
