--- a/example.env
+++ b/example.env
@@ -10,5 +10,9 @@ PORT=11451
 # debug - 调试
 LOG_LEVEL='info'
 
-# 数据存储位置
-DATA_PATH='./data'
+# 数据库配置
+DB_HOST='localhost'
+DB_PORT=5432
+DB_USER='postgres'
+DB_PASSWORD='postgres'
+DB_NAME='unciv-srv'
