--- a/deno.json
+++ b/deno.json
@@ -3,8 +3,8 @@
   "main": "main.ts",
   "license": "MPL-2.0",
   "tasks": {
-    "dev": "deno run --watch --allow-all --env-file=.env main.ts",
-    "start": "deno run --allow-all --env-file=.env main.ts",
+    "dev": "deno run --watch --allow-all --env-file=.env --unstable-cron main.ts",
+    "start": "deno run --allow-all --env-file=.env --unstable-cron main.ts",
     "lint": "deno lint",
     "fmt": "deno fmt"
   },
