--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,9 @@
 {
   "version": "0.0.1",
-  "main": "main.ts",
   "license": "MPL-2.0",
   "tasks": {
-    "dev": "deno run --watch --allow-all --env-file=.env main.ts",
-    "start": "deno run --allow-all --env-file=.env main.ts",
+    "dev": "deno run --watch --allow-all --env-file=.env bin/app.ts",
+    "start": "deno run --allow-all --env-file=.env bin/app.ts",
     "cleanup": "deno run --allow-all --env-file=.env cleanup.ts",
     "lint": "deno lint",
     "fmt": "deno fmt"
