--- a/example.env
+++ b/example.env
@@ -16,3 +16,7 @@ DB_PORT=5432
 DB_USER='postgres'
 DB_PASSWORD='postgres'
 DB_NAME='unciv-srv'
+
+# 管理员配置
+ADMIN_USERNAME='admin'
+ADMIN_PASSWORD='admin123'
