--- a/deno.json
+++ b/deno.json
@@ -10,9 +10,9 @@
   },
   "imports": {
     "@libs/logger": "jsr:@libs/logger@3",
-    "@oak/oak": "jsr:@oak/oak@17",
     "@std/encoding": "jsr:@std/encoding@^1",
-    "npm:postgres": "npm:postgres@^3"
+    "npm:postgres": "npm:postgres@^3",
+    "npm:h3": "npm:h3@^1"
   },
   "fmt": {
     "lineWidth": 120,
