修复编译后无法获取配置的问题

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepare": "nitro prepare",
     "predev": "nitro prepare",
     "build": "nitro build",
-    "preview": "node .output/server/index.mjs"
+    "start": "node --env-file=.env .output/server/index.mjs"
   },
   "dependencies": {
     "postgres": "^3.4.7"
