添加聊天支持

--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "dependencies": {
     "jszip": "^3.10.1",
+    "lru-cache": "^11.1.0",
     "nitropack": "latest",
     "postgres": "^3.4.7"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=22.0.0"
   }
 }
