添加 unix socket 数据库连接支持

--- a/example.env
+++ b/example.env
@@ -4,6 +4,8 @@ PORT=11451
 # 数据库配置
 DB_HOST='localhost'
 DB_PORT=5432
+## 启用 unix socket 连接将覆盖上面的配置
+DB_SOCKET_PATH=
 DB_USER='postgres'
 DB_PASSWORD='postgres'
 DB_NAME='unciv-srv'
@@ -13,5 +15,7 @@ ADMIN_USERNAME='admin'
 ADMIN_PASSWORD='admin123'
 
 # 网页登录限制
-MAX_ATTEMPTS=5 # 次数
-LOCK_TIME=5 # 分钟
+## 次数
+MAX_ATTEMPTS=5
+## 分钟
+LOCK_TIME=5
