--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
         run: |
-          go build -ldflags "-s -w -X main.Version=${{ steps.version.outputs.version }} -X main.BuildTime='${{ steps.version.outputs.build_time }}' -X main.GitCommit=${{ steps.version.outputs.git_commit }}" -o ${{ matrix.output }} ./cmd/server
+          go build -ldflags="-s -w -X main.Version=${{ steps.version.outputs.version }} -X main.BuildTime='${{ steps.version.outputs.build_time }}' -X main.GitCommit=${{ steps.version.outputs.git_commit }}" -o ${{ matrix.output }} ./cmd/server
 
       - name: 上传构建产物
         uses: actions/upload-artifact@v4
